Add equality comparison between QJsonObject and QJsonValueConstRef

- amends 839cffd5212cc1437661e9c650eb2ff4b19fa4e8

Fixes: QTBUG-123927
Change-Id: I9174e747478937d4c9ed6522dd603fea50daf203
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>